--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,7 +3,9 @@
   "name": "Codespace for Skills!",
   // Use the base codespace image
   "image": "mcr.microsoft.com/vscode/devcontainers/universal:latest",
-     ,
+
+  "remoteUser": "codespace",
+  "overrideCommand": false,
  // Add the IDs of extensions you want installed when the container is created.
  "customizations": {
      "vscode": {
@@ -17,7 +19,4 @@
          ]
      }
  }
-  
-  "remoteUser": "codespace",
-  "overrideCommand": false
 }
